--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -4,78 +4,101 @@ defaults:
         radiation_flux: W m-2
         temperature: K
 
+
 models:
     IFS:
         default:
-            deltat: 3600
-            vars:
-                tas: 
-                    source: 2t
-                    attributes:
-                        units: "{temperature}"
-                tprate:
-                    source: tp
-                    grib: true
-                evap:
-                    source: e
-                    src_units: m
-                    attributes:
-                        units: "{mass_flux}"
-
-            data_model: cf2aqua
+            default:
+                deltat: 3600
+                vars:
+                    # Convert (the original is removed) with auto unit conversion from eccodes properties
+                    tprate:
+                        source: tp
+                        grib: true
+                    # Convert overriding source units and specifying target by hand
+                    mer:
+                        source: e
+                        src_units: m
+                        attributes:
+                            units: "{mass_flux}"
+                            long_name: Mean evaporation rate
+                            paramId: 235043
+                data_model: cf2aqua
 
     ICON:
         default:
-            vars:
-                tprate:
-                    source: pr
-                    grib: true
-                mypr:
-                    derived: pr*86400
-                    attributes:
-                        units: "W m-2"
-                mslhfl:
-                    source: hfls
-                    grib: true
-                    attributes:
-                        myextra: just a test
-                msshfl:
-                    source: hfss
-                    attributes:
-                        long_name: Mean surface sensible heat flux
-
-            data_model: cf2aqua
+            default:
+                vars:
+                    # Convert to grib units (kg m-2 s-1 --> m3 s-1)
+                    tprate:
+                        source: pr
+                        grib: true
+                    # Define your own
+                    mypr:
+                        derived: pr*86400
+                        attributes:
+                            units: "mm day-1"
+                            long_name: My own test precipitation in mm / day
+                    # Copy also grib attributes
+                    mslhfl:
+                        source: hfls
+                        grib: true
+                        attributes:
+                            myextra: just a test to add extra attribute
+                    # Just renaming and adding one attribute
+                    msshfl:
+                        source: hfss
+                        attributes:
+                            long_name: Mean surface sensible heat flux
+                data_model: cf2aqua
 
     FESOM:
         default:
-            vars:
-                temp: 
-                    short_name: to
-                    src_units: degC
-                    units: "{temperature}"
+            default:
+                vars:
+                    temp: 
+                        short_name: to
+                        src_units: degC
+                        units: "{temperature}"
 
     MSWEP:
         default:
-            vars:
-                precipitation:
-                    short_name: pr
-                    units: "{mass_flux}"
+            default:
+                vars:
+                    # Automatic conversion to destination grib units
+                    tprate:
+                        source: precipitation
+                        grib: true
+                data_model: cf2aqua
 
     ERA5:
         default:
-            data_model: era2aqua
+            default:
+                deltat: 86400
+                data_model: cf2cds
+            monthly_acc:
+                deltat: 86400
+                vars:
+                    # Derive a variable and determine destination units etc. automatically from eccodes
+                    tprate:
+                        derived: cp+lsp
+                        #src_units: m
+                        grib: true
+                data_model: cf2cds
 
     CERES:
         syn-toa41:
-            vars:
-                mtntrf:
-                    # the fixer cannot parse * followed by - for now
-                    derived: 0.-toa_lw_all_daily*1.0060667743 
-                    attributes:
-                        long_name: Mean top net thermal radiation flux, Observed, All-sky conditions, Daily Means, Energy balanced
-                        standard_name: Observed TOA Longwave Flux - All-sky - Energy balanced
-                        units: W m-2
-                        valid_min: -500
-                        valid_max: 0
-                        positive: down
-                        paramId: 172179
+            default:
+                vars:
+                    mtntrf:
+                        # the fixer cannot parse * followed by - for now
+                        derived: 0.-toa_lw_all_daily*1.0060667743 
+                        attributes:
+                            long_name: Mean top net thermal radiation flux, Observed, All-sky conditions, Daily Means, Energy balanced
+                            standard_name: Observed TOA Longwave Flux - All-sky - Energy balanced
+                            units: W m-2
+                            valid_min: -500
+                            valid_max: 0
+                            positive: down
+                            paramId: 172179
+                data_model: era2aqua
