add pi mesh data for testing

--- a/config/catalog/FESOM/main.yaml
+++ b/config/catalog/FESOM/main.yaml
@@ -14,3 +14,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/test-ng5.yaml"
+  test-pi:
+    description: 5km experiment, coupuled with IFS
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/test-pi.yaml"
