--- a/diagnostics/ecmean/aqua-ecmean.yml
+++ b/diagnostics/ecmean/aqua-ecmean.yml
@@ -10,7 +10,6 @@ dependencies:
   - python>=3.9,<3.11
   - pyYAML
   - xarray
-  - intake
   - dask
   - numpy
   - jinja2
@@ -18,8 +17,7 @@ dependencies:
   - udunits2
   - zarr
   - netcdf4
-  - intake-xarray
-  - ecCodes
+  - ecCodes      
   - matplotlib
   - cartopy
   - healpy
@@ -27,6 +25,9 @@ dependencies:
   - cfunits
   - metpy
   - cdo
+  - intake-esm=2021.8.17
+  - intake
+  - intake-xarray
   - pip
   - esmpy<=8.3.1 # from here is Ecmean
   - xesmf
