--- a/diagnostics/ecmean/interface_IFS+NEMO.yml
+++ b/diagnostics/ecmean/interface_IFS+NEMO.yml
@@ -23,20 +23,12 @@ model:
 # Definition of filetypes (specific for each component)
 # Each variable belongs to a filetype
 filetype: 
-  atm2d:
-    filename: '{var}_{expname}.nc'
+  atmbase:
+    filename: '*.nc'
     dir: ''
     component: cmoratm
-  atm3d:
-    filename: '{var}_{expname}.nc'
-    dir: ''
-    component: cmoratm
-  oceT:
-    filename: '{var}_{expname}.nc'
-    dir: ''
-    component: cmoroce
-  ice:
-    filename: '{var}_{expname}.nc'
+  ocebase:
+    filename: '*.nc'
     dir: ''
     component: cmoroce
 
@@ -50,164 +42,160 @@ filetype:
 # If a relative path is used this is attached to $ECEDIR/$basedir
 component:
   cmoratm:
-    maskfile: 'lsm_{expname}.nc'
+    maskfile: '/home/b/b382076/work/ecmean/data/mask_r100.nc'
     gridfile: ''
-    areafile: ''
+    areafile: '/work/bb1153/b382075/nextgems/weights/areas_r100.nc'
   cmoroce:
     maskfile: ''
-    gridfile: 'sst_{expname}.nc'
-    areafile: ''
+    gridfile: ''
+    areafile: '/work/bb1153/b382075/nextgems/weights/areas_r100.nc'
 
 # Definition of individual variables
 variables:
   tas:
     derived: '2t'
     varname: '2m Temperature'
-    filetype: atm2d 
+    filetype: atmbase 
   pr:
     derived: 'tp'
     varname: 'Total precipitation'
-    filetype: atm2d 
+    filetype: atmbase 
   evspsbl:
     varname: Evaporation
     derived: e
-    filetype: atm2d
+    filetype: atmbase
   pme:
     varname: 'Precip. minus evap.'
     derived: 'tp+e'
-    filetype: atm2d
+    filetype: atmbase
   ta: 
     varname: 'Air Temperature'
     derived: t
-    filetype: atm3d
+    filetype: atmbase
   ua:
     varname: 'Zonal Wind'
     derived: u
-    filetype: atm3d
+    filetype: atmbase
   va:
     varname: 'Meridional Wind'
     derived: v
-    filetype: atm3d
+    filetype: atmbase
   hus:
     varname: 'Specific Humidity'
     derived: q
-    filetype: atm3d
+    filetype: atmbase
   psl: 
     varname: MSLP
-    filetype: atm2d
+    filetype: atmbase
     derived: msl
   tauu: 
     varname: 'Zonal Wind Stress'
     derived: ewss
-    filetype: atm2d
+    filetype: atmbase
   tauv:
     varname: 'Meridional Wind Stress'
     derived: nsss
-    filetype: atm2d
+    filetype: atmbase
   cll:
     derived: lcc
     varname: 'Low cloud cover'
-    filetype: atm2d
+    filetype: atmbase
   clm:
     derived: mcc
     varname: 'Medium cloud cover'
-    filetype: atm2d
+    filetype: atmbase
   clh:
     derived: hcc
     varname: 'High cloud cover'
-    filetype: atm2d
+    filetype: atmbase
   siconc:
     varname: 'Sea-ice Concentration'
     derived: ci
-    filetype: ice
-  siconc_north:
-    varname: 'Sea-ice Concentration'
-    derived: ci
-    filetype: ice
-  siconc_south:
-    varname: 'Sea-ice Concentration'
-    derived: ci
-    filetype: ice
+    filetype: ocebase
   rlnt:
     varname: 'TOA net LW'
     derived: ttr
-    filetype: atm2d
+    filetype: atmbase
   rlntcs:
     varname: 'TOA net LW'
     derived: ttrc
-    filetype: atm2d
+    filetype: atmbase
   rsnt:
     varname: 'TOA net SW'
     derived: tsr
-    filetype: atm2d
+    filetype: atmbase
   rsntcs:
     varname: 'TOA net SW, CS'
     derived: tsrc
-    filetype: atm2d
+    filetype: atmbase
   net_toa:
     varname: 'Net TOA'
     units: W/m2
     derived: 'tsr+ttr'
-    filetype: atm2d
+    filetype: atmbase
   swcf:
     varname: 'SW CRE'
     derived: 'tsr-tsrc'
-    filetype: atm2d
+    filetype: atmbase
   lwcf:
     varname: 'LW CRE'
     derived: 'ttr-ttrc'
-    filetype: atm2d
+    filetype: atmbase
   tos:
     varname: SST
     derived: sst
-    filetype: oceT
+    filetype: ocebase
+  sos:
+    varname: SSS
+    derived: sss
+    filetype: ocebase
   pr_land:
     varname: 'Precipitation (land)'
     derived: tp
-    filetype: atm2d
+    filetype: atmbase
   pr_oce:
     varname: 'Precipitation (ocean)'
     derived: tp
-    filetype: atm2d
+    filetype: atmbase
   pme_land:
     varname: 'Precip. minus evap. (land)'
     derived: 'tp+e'
-    filetype: atm2d
+    filetype: atmbase
   pme_oce:
     varname: 'Precip. minus evap. (ocean)'
     derived: 'tp+e'
-    filetype: atm2d
+    filetype: atmbase
   rlns:
     varname: 'Surface net LW'
-    filetype: atm2d
+    filetype: atmbase
     derived: str
   rsns:
     varname: 'Surface net SW'
-    filetype: atm2d
+    filetype: atmbase
     derived: ssr
   hfss:
     varname: 'Surface SH'
-    filetype: atm2d
+    filetype: atmbase
     derived: slhf
   hfls:
     varname: 'Surface LH'
-    filetype: atm2d
+    filetype: atmbase
     derived: sshf
   net_sfc_nosn:
     varname: 'Net Surface (no snowfall)'
-    filetype: atm2d
+    filetype: atmbase
     derived: 'str+ssr+slhf+sshf'
   net_sfc:
     varname: 'Net Surface'
     units: W/m2
-    filetype: atm2d
+    filetype: atmbase
     derived: 'str+ssr+slhf+sshf-sf*334000000'
   toamsfc:
     varname: 'TOA-Sfc net radiation'
     units: W/m2
-    filetype: atm2d
+    filetype: atmbase
     derived: 'tsr+ttr-str-ssr-slhf-sshf+sf*334000000'
   toamsfc_nosn:
     varname: 'TOA-Sfc net rad. (no snowfall)'
-    filetype: atm2d
+    filetype: atmbase
     derived: 'tsr+ttr-str-ssr-slhf-sshf'
