--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -1,4 +1,10 @@
 defaults:
+
+    # The default datamodel for sources if not specified below
+    src_datamodel: cf
+    # The datamodel convention (axes names, directions) for output coordinates
+    dst_datamodel: aqua
+
     units:
         mass_flux:  kg m-2 s-1
         radiation_flux: W m-2
@@ -23,7 +29,7 @@ models:
                             units: "{mass_flux}"
                             long_name: Mean evaporation rate
                             paramId: 235043
-                data_model: cf2aqua
+                # data_model: cf   # commented for testing the default source data model
 
     ICON:
         default:
@@ -50,16 +56,18 @@ models:
                         source: hfss
                         attributes:
                             long_name: Mean surface sensible heat flux
-                data_model: cf2aqua
+                # The input data model for coordinates
+                data_model: cf
 
     FESOM:
         default:
             default:
                 vars:
-                    temp: 
-                        short_name: to
-                        src_units: degC
-                        units: "{temperature}"
+                    # ocpt: 
+                    #    source: temp
+                    #    src_units: degC
+                    #    units: degC
+                    #    grib: true
 
     MSWEP:
         default:
@@ -69,13 +77,13 @@ models:
                     tprate:
                         source: precipitation
                         grib: true
-                data_model: cf2aqua
+                data_model: cf
 
     ERA5:
         default:
             default:
                 deltat: 86400
-                data_model: cf2cds
+                data_model: cf
             monthly_acc:
                 deltat: 86400
                 vars:
@@ -84,12 +92,12 @@ models:
                         derived: cp+lsp
                         #src_units: m
                         grib: true
-                data_model: cf2cds
+                data_model: cf
 
     CERES:
         default:
             default:
-                data_model: cf2cds
+                data_model: cf
         syn-toa41:
             default:
                 vars:
@@ -138,4 +146,4 @@ models:
                             valid_max: 1400
                             positive: down
 
-                data_model: cf2cds
+                data_model: cf
