--- a/environment.yml
+++ b/environment.yml
@@ -3,32 +3,34 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.9,<3.11
-  - pyYAML
-  - xarray
-  - dask
-  - numpy
-  - jinja2
-  - tqdm
-  - udunits2
-  - zarr
-  - netcdf4
+  # - pyYAML
+  # - xarray
+  # - dask
+  - numpy<=1.23.5
+  # - jinja2
+  # - tqdm
+  # - udunits2
+  # - zarr
+  # - netcdf4
   - ecCodes      
-  - matplotlib
-  - cartopy
+  # - matplotlib
+  # - cartopy
   - healpy
-  - ipykernel
-  - cfunits
-  - metpy
+  # - ipykernel
+  # - cfunits
+  # - metpy
   - cdo
-  - intake-esm=2021.8.17
-  - intake
-  - intake-xarray
-  - pip
-  - pip:
-    - sparse
-    - docker
-    - gribscan
-    - git+https://github.com/jhardenberg/smmregrid.git
+  # - intake-esm=2021.8.17
+  # - intake
+  # - intake-xarray
+  # - pip
+  # pip:
+  #   - sparse
+  #   - docker
+  #   - gribscan
+  #   - git+https://github.com/jhardenberg/smmregrid.git
+  #   - git+https://github.com/jhardenberg/smmregrid.git
+
 #    - git+https://github.com/intake/intake.git
 #    - git+https://github.com/intake/intake-xarray.git 
 #    - git+https://github.com/intake/intake-esm.git
