add IFS tco79 files

--- a/config/ci/catalog.yaml
+++ b/config/ci/catalog.yaml
@@ -4,3 +4,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/FESOM/main.yaml"
+  IFS:
+    description: IFS atmospheric model
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/IFS/main.yaml"
