--- a/config/levante/catalog/MSWEP/past.yaml
+++ b/config/levante/catalog/MSWEP/past.yaml
@@ -14,7 +14,7 @@ sources:
       urlpath: '/work/bb1153/b382075/datasets/MSWEP_V280/Past/Monthly/*.nc'
       chunks: {}
       xarray_kwargs:
-        decode_times: False
+        decode_times: True
 
   daily:
     description: daily MSWEP_V280 data
@@ -27,7 +27,7 @@ sources:
       urlpath: '/work/bb1153/b382075/datasets/MSWEP_V280/Past/Daily/*.nc'
       chunks: {}
       xarray_kwargs:
-        decode_times: False
+        decode_times: True
 
   3hourly:
     description: 3 hourly MSWEP_V280 data
@@ -40,7 +40,7 @@ sources:
       urlpath: '/work/bb1153/b382075/datasets/MSWEP_V280/Past/3hourly/*.nc'
       chunks: {}
       xarray_kwargs:
-        decode_times: False
+        decode_times: True
 
   monthlyz:
     description: monthly MSWEP_V280 data
