--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -20,10 +20,12 @@ models:
                     tprate:
                         source: tp
                         grib: true
+                        decumulate: true
                     # Convert overriding source units and specifying target by hand
                     mer:
                         source: e
                         src_units: m
+                        decumulate: true
                         attributes:
                             units: "{mass_flux}"
                             long_name: Mean evaporation rate
@@ -56,7 +58,7 @@ models:
                         attributes:
                             long_name: Mean surface sensible heat flux
                 # The input data model for coordinates
-                data_model: False  # Do not attempto to correct coordinates
+                data_model: false  # Do not attempto to correct coordinates
 
     FESOM:
         default:
