some polishing, new filename for download

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -20,7 +20,7 @@ jobs:
       #     pip install .
       - name: Download and setup tests
         run: |
-          ./tests.sh
+          ./download_data_for_tests.sh
       - name: Run tests
         run: |
           python -m pytest ./tests/test_basic.py        
