icon initial catalog

--- a/config/lumi/catalog.yaml
+++ b/config/lumi/catalog.yaml
@@ -1,1 +1,6 @@
-# empty fella!
+sources:
+  IFS:
+    description: IFS atmosphere model
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/IFS/main.yaml"
