--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # machine dependent configuration file for AQUA
 # so far nothing is really strict
-machine: levante
+machine: lumi
 
 reader: 
   catalog: '{configdir}/{machine}/catalog.yaml'
