--- a/config/lumi/catalog/IFS/tco399-orca025.yaml
+++ b/config/lumi/catalog/IFS/tco399-orca025.yaml
@@ -9,3 +9,17 @@ sources:
     args:
       consolidated: False
       urlpath: reference::/users/padavini/work/gribscan-json/tco399-orca025/atm2d.json
+  lra-r100-day:
+    driver: netcdf
+    args:
+      urlpath: '/pfs/lustrep1/projappl/project_462000048/davini/LRA/tco399-orca025/r100/day/*.nc'
+      chunks: {}
+      xarray_kwargs:
+        decode_times: True
+  lra-r100-mon:
+    driver: netcdf
+    args:
+      urlpath: '/pfs/lustrep1/projappl/project_462000048/davini/LRA/tco399-orca025/r100/mon/*.nc'
+      chunks: {}
+      xarray_kwargs:
+        decode_times: True
