--- a/config/lumi/catalog/IFS/main.yaml
+++ b/config/lumi/catalog/IFS/main.yaml
@@ -4,3 +4,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/tco399-orca025.yaml"
+  tco399-orca025-python:
+    description: 25km IFS and ORCA
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/tco399-orca025-python.yaml"
