--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -11,20 +11,24 @@ on:
 
 jobs:
   aqua_test:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10"]
     defaults:
       run:
         shell: bash -l {0}
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Provision with Micromamba
         uses: mamba-org/provision-with-micromamba@v15
-
-      # - name: Install Project
-      #   run: |
-      #     pip install .
+        with:
+          environment-file: environment.yml
+          cache-downloads: true
+          extra-specs: |
+              python=${{ matrix.python-version }}
       - name: Download and setup tests
         run: |
           ./download_data_for_tests.sh
