--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -18,68 +18,68 @@ models:
                 month_jump: true
                 vars:
                     tprate:
-                        derived: tp
+                        source: tp
                         grib: true
                         decumulate: true    
                     var172143:  # cprate
-                        derived: cp
+                        source: cp
                         grib: true
                         decumulate: true
                     mlsprt:
-                        derived: lsp
+                        source: lsp
                         grib: true
                         decumulate: true  
                     erate:
-                        derived: e
+                        source: e
                         grib: true
                         src_units: m
                         decumulate: true 
                     esrate:
-                        derived: es
+                        source: es
                         grib: true
                         decumulate: true 
                     mrort:
-                        derived: ro
+                        source: ro
                         grib: true
                         decumulate: true
                     mtsfr:
-                        derived: sf
+                        source: sf
                         grib: true
                         decumulate: true
                     mslhfl:
-                        derived: slhf
+                        source: slhf
                         grib: true
                         decumulate: true
                     msshfl:
-                        derived: sshf
+                        source: sshf
                         grib: true
                         decumulate: true
                     msnsrf:
-                        derived: ssr
+                        source: ssr
                         grib: true
                         decumulate: true
                     msdsrf:
-                        derived: ssrd
+                        source: ssrd
                         grib: true
                         decumulate: true  
                     msdtrf:
-                        derived: strd
+                        source: strd
                         grib: true
                         decumulate: true   
                     msntrf:
-                        derived: str
+                        source: str
                         grib: true
                         decumulate: true
                     msdtrf:
-                        derived: strd
+                        source: strd
                         grib: true
                         decumulate: true
                     mtntrf:
-                        derived: ttr
+                        source: ttr
                         grib: true
                         decumulate: true         
                     var172045:  # if the variable has no short name we can use its paramId
-                        derived: smlt
+                        source: smlt
                         grib: true
                         decumulate: true
 
