--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -13,7 +13,8 @@ defaults:
 models:
     IFS:
         default:
-            ICMGG_atm2d:
+            default:
+                data_model: ifs
                 deltat: 3600
                 jump: month
                 vars:
