catalog entry creation

--- a/config/levante/catalog.yaml
+++ b/config/levante/catalog.yaml
@@ -29,3 +29,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/catalog/CERES/main.yaml"
+  AVISO:
+    description: CERES-EBAF radiation data
+    driver: yaml_file_cat
+    args:
+      path: "{{CATALOG_DIR}}/catalog/AVISO/main.yaml"
