--- a/config/ci/catalog/IFS/test-tco79.yaml
+++ b/config/ci/catalog/IFS/test-tco79.yaml
@@ -2,12 +2,20 @@ plugins:
   source:
   - module: intake_xarray
 sources:
-  original_2d:
+  short:
     args:
       chunks:
         time: 1
       urlpath:
-      - ./AQUA_tests_short/IFS/IFS/IFS2d.tco79.nc
+      - ./AQUA_tests/models/IFS/short/IFS2d.tco79.nc
     description: original 2d output
+    driver: netcdf
+  long:
+    args:
+      chunks:
+        time: 1
+      urlpath:
+      - ./AQUA_tests/models/IFS/long/regridded_r18x9.nc
+    description: coarse IFS data 1y
     driver: netcdf
   
